fixing overflow

--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@ body {
     -webkit-touch-callout: none;
 }
 
-/** Seppel only shows the startscreen **/
-.seppel {
+/** Welcome-screen only shows the startscreen **/
+.welcome-screen {
     position: absolute;
     top: 0;
     left: 0;
@@ -58,6 +58,7 @@ body {
     background-image: url("./img/9_intro_outro_screens/start/startscreen_2.png");
     background-size: cover;
     background-repeat: no-repeat;
+    overflow-x: hidden;
     opacity: 100%;
     z-index: 10;
 }
@@ -122,7 +123,7 @@ canvas {
     cursor: pointer;
     position: absolute;
     top: 20%;
-    left: 20%;
+    right: 25%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -139,8 +140,8 @@ canvas {
 .description {
     transition: all 225ms ease-in-out;
     position: absolute;
-    top: 22%;
-    left: 22%;
+    top: 25%;
+    right: 10%;
     width: 240px;
     background: #f4efef;
     padding: 20px;
@@ -150,7 +151,7 @@ canvas {
 
 .hidden {
     transition: all 225ms ease-in-out;
-    translate: -1000px;
+    translate: 1000px;
 }
 
 .descriptionBtn:hover + .description.hidden {
@@ -160,6 +161,25 @@ canvas {
 .descriptionBtn:hover {
     transition: all 225ms ease-in-out;
     transform: rotate(180deg);
+}
+
+.fullscreen {
+    transition: all 225ms ease-in-out;
+    cursor: pointer;
+    position: absolute;
+    top: 20%;
+    right: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: orange;
+    border: 1px solid black;
+    color: black;
+    font-size: 24px;
+    z-index: 11;
 }
 
 h1 {
